--- a/JAVA/src/com/view/ChangePassword.form
+++ b/JAVA/src/com/view/ChangePassword.form
@@ -38,11 +38,13 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="label3" max="32767" attributes="0"/>
                           <Component id="label2" max="32767" attributes="0"/>
+                          <Component id="label4" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="textField2" min="-2" pref="106" max="-2" attributes="0"/>
                           <Component id="textField1" min="-2" pref="106" max="-2" attributes="0"/>
+                          <Component id="textField3" min="-2" pref="106" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -65,7 +67,12 @@
                   <Component id="label3" min="-2" max="-2" attributes="0"/>
                   <Component id="textField1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="38" max="32767" attributes="0"/>
+              <EmptySpace pref="30" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="label4" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="textField3" alignment="1" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="button1" min="-2" max="-2" attributes="0"/>
                   <Component id="button2" min="-2" max="-2" attributes="0"/>
@@ -125,6 +132,13 @@
     <Component class="java.awt.TextField" name="textField1">
     </Component>
     <Component class="java.awt.TextField" name="textField2">
+    </Component>
+    <Component class="java.awt.Label" name="label4">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Confirm Password:"/>
+      </Properties>
+    </Component>
+    <Component class="java.awt.TextField" name="textField3">
     </Component>
   </SubComponents>
 </Form>
